crates/osp-core/tests/compile_fail/c6_intent_cannot_form_observed_code_evidence.stderr
error[E0308]: mismatched types
  --> tests/compile_fail/c6_intent_cannot_form_observed_code_evidence.rs:29:9
   |
24 |     let _evidence = ObservedCodeEvidence::new(
   |                     ------------------------- arguments to this function are incorrect
...
29 |         ConceptualIntentVector::new(0.5, 0.5, 0.5, 0.5, 0.5, 0.5),
   |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ expected `ObservedPhysicalMetrics`, found `ConceptualIntentVector`
   |
note: associated function defined here
  --> src/anchoring/types.rs
   |
   |     pub fn new(
   |            ^^^
